examples/pass/WWeq.stl
/** RReq *//
global x; 
local l; 

/** Optimised **/ 
write(x,l); 

/** Unoptimised **/ 
write(x,l); 
