examples/fail/Rx-Wx.stl
/** RWswap **/
global x; 
local l; 

/** Optimised **/ 
write(x,l); 

/** Unoptimised **/ 
read(x,l); 
